--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "animated": "^0.2.2",
     "babel-preset-expo": "^4.0.0",
+     "firebase": "^5.5.6",
     "react": "16.3.1",
     "react-dom": "^16.6.0",
-    "react-native": "^0.55.4",
+    "react-native": "^0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-mail": "^3.0.6",
     "react-native-pure-chart": "0.0.24",
