--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "dependencies": {
     "animated": "^0.2.2",
     "babel-preset-expo": "^4.0.0",
-     "firebase": "^5.5.6",
+    "firebase": "^5.0.3",
+    "native-base": "^2.8.1",
     "react": "16.3.1",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.6.3",
     "react-native": "^0.55.2",
     "react-native-elements": "^0.19.1",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-mail": "^3.0.6",
     "react-native-pure-chart": "0.0.24",
     "react-native-radio-buttons-group": "^1.0.7",
-    "react-native-vector-icons": "^6.0.2",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2",
     "whatwg-fetch": "^2.0.4"
   },
