--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-mail": "^3.0.6",
     "react-native-pure-chart": "0.0.24",
     "react-native-radio-buttons-group": "^1.0.7",
+    "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.3",
     "whatwg-fetch": "^2.0.4"
